<resources>
    <string name="app_name">Flickr</string>
    <string name="app_name_toolbar">flickr</string>

    <string name="description_recent_img">recently shared images</string>
    <string name="description_close_image">close image</string>
    <string name="description_image_activity_main_image">selected image</string>
    <string name="description_fav_btn">favorite</string>
    <string name="description_comment_btn">comment</string>
    <string name="description_share">share</string>
    <string name="description_info">info</string>
    <string name="hint_search_flickr">Search Flickr</string>
    <string name="btn_cancel">Cancel</string>
    <string name="description_ic_search">magnifying glass icon</string>
    <string name="description_search_image">searched images result</string>
    <string name="description_btn_clear_text">search text clear button</string>
    <string name="description_search_magnifying_glass">search magnifying glass</string>
    <string name="description_search_history_delete_btn">delete from search history</string>
    <string name="info_last_page">Oppss! You\'ve reached to the last page</string>

</resources>
