<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dr_bckgrnd_image_act_bottom"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="56dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/txtImageActImageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        tools:text="image title placeholder image title placeholder" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tablayout_unselected" />

    <ProgressBar
        android:id="@+id/pbarImageActLoading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:indeterminate="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnImageActFavorite"
            android:layout_width="@dimen/btn_size_img_act_bottom"
            android:layout_height="@dimen/btn_size_img_act_bottom"
            android:background="@drawable/ic_star_white"
            android:contentDescription="@string/description_fav_btn" />

        <ImageButton
            android:id="@+id/btnImageActComment"
            android:layout_width="@dimen/btn_size_img_act_bottom"
            android:layout_height="@dimen/btn_size_img_act_bottom"
            android:layout_marginStart="@dimen/btn_margin_img_act_bottom"
            android:layout_marginLeft="@dimen/btn_margin_img_act_bottom"
            android:background="@drawable/ic_chat_bubble_outline_white"
            android:contentDescription="@string/description_comment_btn" />

        <ImageButton
            android:id="@+id/btnImageActShare"
            android:layout_width="@dimen/btn_size_img_act_bottom"
            android:layout_height="@dimen/btn_size_img_act_bottom"
            android:layout_marginStart="@dimen/btn_margin_img_act_bottom"
            android:layout_marginLeft="@dimen/btn_margin_img_act_bottom"
            android:background="@drawable/ic_share_white"
            android:contentDescription="@string/description_share" />

        <ImageButton
            android:id="@+id/btnImageActInfo"
            android:layout_width="@dimen/btn_size_img_act_bottom"
            android:layout_height="@dimen/btn_size_img_act_bottom"
            android:layout_marginStart="@dimen/btn_margin_img_act_bottom"
            android:layout_marginLeft="@dimen/btn_margin_img_act_bottom"
            android:background="@drawable/ic_info_outline_white"
            android:contentDescription="@string/description_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtImageActViewCount"
                style="@style/ImageActivityCommentFavTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="122495 Views" />

            <TextView
                android:id="@+id/txtImageActCommentCount"
                style="@style/ImageActivityCommentFavTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="12215 Comments" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>